force-app/main/default/objects/Income__c/fields/Amount_Source__c.field-meta.xml
<CustomField>
    <fullName>Amount_Source__c</fullName>
    <label>Amount Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>