force-app/main/default/objects/Income__c/fields/Next_Expected_Interest__c.field-meta.xml
<CustomField>
    <fullName>Next_Expected_Interest__c</fullName>
    <label>Next Expected Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>