force-app/main/default/objects/Income__c/fields/Total_Principal__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal__c</fullName>
    <label>Total Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>